# ChefGPT-MobileCookingAndNutritionAssistant

./: .gitignore  DEPLOYMENT.md  PROPOSAL.md  README.md  chef_gpt_readme.md  chefgpt_openapi.yaml  claude.md
backend/: .dockerignore  .env.example  .env.production  .env.staging  .gitignore  ChefGPT.postman_collection.json  Dockerfile  Dockerfile.prod  Makefile  RAG_README.md  README.md  alembic.ini  curl_examples.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_initial_migration.py  002_add_persona_settings.py  003_add_user_memories.py  004_add_custom_personas.py  005_add_ap2_payment_system.py
backend/app/: main.py
backend/app/agents/: __init__.py  agent_registry.py  base_agent.py  chef_agent.py  coordinator_agent.py  nutritionist_agent.py  shopping_agent_new.py
backend/app/core/: config.py  database.py  logging_config.py  security.py
backend/app/llm/: client.py
backend/app/mcp_servers/: __init__.py  memory_server.py  nutrition_server.py  recipe_server.py  shopping_server.py  vision_server.py
backend/app/middleware/: logging_middleware.py
backend/app/mocks/: posts.json  products.json  recipe_embeddings.json  recipes.json  shopping.json
backend/app/models/: __init__.py  chat.py  meal_plan.py  (+7 more)
backend/nginx/: nginx.conf
backend/scripts/: deploy.sh  health-check.sh  init-db.sql  reindex_recipes.py  rollback.sh  seed-production.sh  seed_recipes.py
backend/tests/: __init__.py  conftest.py  test_agent_loop.py  test_coordinator_agent.py  test_main.py  test_tool_registry.py
(+125 files in other folders)
